src/test/deca/syntax/valid/our_tests/alex-noOp.deca
// Description:
//    Programme testant NoOperation
//
// Resultats: (vide)
//    
//
// Historique:
//    cree le 11/01/2017

{
    ;
}