src/test/deca/syntax/invalid/our_synt_tests/jb-simple_lex3.deca
// Description:
//    tests de programme lexicalement correct
//
// Resultats:
//    ligne 13: Erreur de syntax.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 12/01/2017

{
	while true {
		println("looping");
	}
}